# my-post

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  media.py
app/connectors/: __init__.py  base.py  bluesky.py  instagram.py  threads.py  x.py
app/static/: counter.js  handoff.js  styles.css
app/templates/: base.html  compose.html  results.html
docs/plans/: 2026-07-06-my-post-design.md  2026-07-06-my-post-implementation.md  2026-07-07-ui-redesign-design.md
scripts/: make-cert.sh
tests/: test_base.py  test_config.py  test_connectors_bluesky.py  test_connectors_instagram.py  test_connectors_threads.py  test_connectors_x.py  test_main.py  test_media.py  test_registry.py
